@@ -57,6 +57,9 @@ Differences Between DuMuX 2.6 and DuMuX 2.7
       it has to be renamed to "newtonUpdateShift". See
       dumux/nonlinear/newtoncontroller.hh for an example.
 
+  - The properties "AMGPDELabBackend" and "AMGLocalFemMap" have been unified to
+    "AmgTraits".
+
 * Deprecated PROPERTY and PARAMETER NAMES, to be removed after 2.7: BEWARE: The
   compiler will not print any warning if a deprecated property or parameter name
   is used. However, a run-time warning should appear in the summary lines after
@@ -71,7 +74,11 @@ Differences Between DuMuX 2.6 and DuMuX 2.7
     SatisfyAbsAndRel -> SatisfyResidualAndShiftCriterion
 
 * Deprecated CLASSES/FILES, to be removed after 2.7:
-  - CellData2P2Cmultiphysics, replaced by CellData2P2CMultiPhysics
+  - SeqAMGBackend and ScaledSeqAMGBackend, replaced by AMGBackend.
+
+  - P0LocalFiniteElementMap.
+
+  - CellData2P2Cmultiphysics, replaced by CellData2P2CMultiPhysics.
 
 * Deprecated MEMBER FUNCTIONS, to be removed after 2.7:
   - The functions "heatCapacity", "densitySolid" (mpnc only) and
